# cplot

./: .gitignore  CMakeLists.txt  README.md  config.h  main.c  test.sh  test_api.c  test_api.sh  test_char.sh  test_console.sh  test_slop.c  test_tupper.c
.github/workflows/: cmake-multi-platform.yml  update-asset-on-push.yml
demo/: test_parametric.c  test_polar.c  test_slop.c
examples/lissajous_1/: script.sh
examples/lissajous_11/: script.sh
examples/lissajous_2/: script.sh
examples/lissajous_3/: script.sh
examples/lissajous_4/: script.sh
examples/parametric_6/: script.sh
examples/parametric_7/: script.sh
examples/parametric_8/: script.sh
examples/parametric_9/: script.sh
examples/polar_10/: script.sh
examples/polar_5/: script.sh
src/: config.h
src/cplot/: cplot.c
src/cplot/include/: cplot.h  log_levels.h  setters.h
src/cplotter/: cplotter.c
src/logger/: logger.c  logger.h
